# lidar-camera-fusion

./: CMakeLists.txt  README.md  package.xml
cfg/: cfg_params.yaml
launch/: interpolated_vlp16.launch  vlp16OnImg.launch  vlp16OnImg_offline.launch
rviz/: interpoled.rviz  lidar_camera.rviz
src/: interpolated_lidar.cpp  lidar_camera_node.cpp
